2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>


	* src/ui/game-2-player.c: add sfx on 2 players game
	* src/ui/game-network-player.c: add sfx on network game

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

        merge network_fix branch

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

        merge audio branch

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/net/game.c: remove timeout_idle when game finished

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/game-network-player.c : enable auto shoot

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/monkey/monkey.[ch]: change how add row is make
	* src/net/game.c: change how row is add
	* src/net/message-handler.[ch],
	* src/net/monkey-marshal.list:  add new message
	* src/ui/game-2-player.c: change how add row is make

2007-06-30  Laurent Belmonte  <laurent.belmonte@gmail.com>


	* src/monkey/monkey.c,
	* src/monkey/monkey.h,
	* src/net/game.c,
	* src/ui/game-2-player.c,
	* src/ui/game-network-player-manager.c,
	* src/ui/game-network-player-manager.h,
	* src/ui/game-network-player.c,
	* src/ui/game-network-player.h,
	* src/util/clock.c,
	* src/util/clock.h: first step to fix network
	* src/ui/main.c: fix compilation error one more time

2007-06-11  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/audio/mb-audio-engine.[ch]:add play_full 
	with boolean param to loop on audio stream
	* src/audio/sound-manager.[ch]: change api to use
	enum constant instead of full path
	* src/ui/ui-main.c: use enum constant instead of
	music file full path for choosing music

2007-06-11  Laurent Belmonte  <laurent.belmonte@gmail.com>

	- use autoaudiosink instead of alsasing.
	- set buffer-time property to 20000 microsecond
	* src/audio/mb-audio-engine.c: 
	

2007-06-10  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/audio/Makefile.am: Add music-bin
	* src/audio/mb-audio-engine.c: code cleanup